@@ -271,13 +271,35 @@ gfxn1/Opt/VecTest/SetPtrOverhead                                   0.048155
 gfxn1/Opt/VecTest/VecCreationOverhead                              0.02908
 gfxn1/Opt/VecTest/isEqualOverhead                                  0.17196
 gfxn2/Debug/Main/MetricTest                                        1221.75
+gfxn2/Debug/MatrixCompareTest/IsEqualTest                          3.85639
+gfxn2/Debug/MatrixCompareTest/OpEqualityTest                       2.02433
+gfxn2/Debug/MatrixCompareTest/OpNotEqualityTest                    2.26893
 gfxn2/Debug/MatrixCompareTest/matIsEqualTest                       3.94388
 gfxn2/Debug/MatrixCompareTest/matOpEqualityTest                    2.05398
 gfxn2/Debug/MatrixCompareTest/matOpNotEqualityTest                 2.20145
+gfxn2/Debug/MatrixGenTest/MakeRot33ByRef                           0.70894
+gfxn2/Debug/MatrixGenTest/MakeRot33ByVal                           1.45696
+gfxn2/Debug/MatrixGenTest/MakeRot34ByRef                           0.8113
+gfxn2/Debug/MatrixGenTest/MakeRot34ByVal                           1.66192
+gfxn2/Debug/MatrixGenTest/MakeRot44ByRef                           0.94695
+gfxn2/Debug/MatrixGenTest/MakeRot44ByVal                           2.0464
+gfxn2/Debug/MatrixOpsTest/Add44                                    1.22131
+gfxn2/Debug/MatrixOpsTest/Mult44                                   6.30993
+gfxn2/Debug/MatrixOpsTest/Mult44operatorStar                       7.39689
+gfxn2/Debug/MatrixOpsTest/Sub44                                    1.23018
+gfxn2/Debug/MatrixOpsTest/TransposeTest                            0.961627
 gfxn2/Debug/MatrixOpsTest/matAdd44                                 1.26911
 gfxn2/Debug/MatrixOpsTest/matMult44                                6.30187
 gfxn2/Debug/MatrixOpsTest/matSub44                                 1.2769
 gfxn2/Debug/MatrixOpsTest/matTransposeTest                         0.96003
+gfxn2/Debug/MatrixTest/ConstructorOverhead                         2.84905
+gfxn2/Debug/MatrixTest/CopyConstructorOverhead                     1.09121
+gfxn2/Debug/MatrixTest/GetDataOverhead                             0.05341
+gfxn2/Debug/MatrixTest/OpBracketOverhead                           0.0938875
+gfxn2/Debug/MatrixTest/OpEqualOverhead                             0.31938
+gfxn2/Debug/MatrixTest/OpParenOverhead                             0.137462
+gfxn2/Debug/MatrixTest/SetOverhead                                 0.247158
+gfxn2/Debug/MatrixTest/SetPtrOverhead                              0.710313
 gfxn2/Debug/MatrixTest/matConstructorOverhead                      2.88648
 gfxn2/Debug/MatrixTest/matCopyConstructorOverhead                  1.10688
 gfxn2/Debug/MatrixTest/matGetDataOverhead                          0.05429
@@ -286,6 +308,11 @@ gfxn2/Debug/MatrixTest/matOpEqualOverhead                          0.317755
 gfxn2/Debug/MatrixTest/matOpParenOverhead                          0.13746
 gfxn2/Debug/MatrixTest/matSetOverhead                              0.260958
 gfxn2/Debug/MatrixTest/matSetPtrOverhead                           0.720383
+gfxn2/Debug/PlaneTest/CopyConstructOverhead                        0.0882125
+gfxn2/Debug/PlaneTest/DefaultCreationOverhead                      0.067655
+gfxn2/Debug/PlaneTest/NormOffsetCreationOverhead                   0.0885125
+gfxn2/Debug/PlaneTest/NormPtCreationOverhead                       0.287602
+gfxn2/Debug/PlaneTest/ThreePtCreationOverhead                      1.61766
 gfxn2/Debug/PointTest/ConstructorsOverhead                         0.224658
 gfxn2/Debug/PointTest/CopyConstructOverhead                        0.261468
 gfxn2/Debug/PointTest/EqualityCompareOverhead                      0.223107
@@ -356,7 +383,7 @@ gfxn2/Debug/VecTest/OpPlusEqOverhead                               0.172887
 gfxn2/Debug/VecTest/OpPlusOverhead                                 0.393245
 gfxn2/Debug/VecTest/SetOverhead                                    0.171288
 gfxn2/Debug/VecTest/SetPtrOverhead                                 0.26352
-gfxn2/Debug/VecTest/VecCreationOverhead                            0.232283
+gfxn2/Debug/VecTest/VecCreationOverhead                            0.214422
 gfxn2/Debug/VecTest/const_vec+const_vec+const_vec:perf             0.9514
 gfxn2/Debug/VecTest/const_vec-const_vec-const_vec:perf             0.885
 gfxn2/Debug/VecTest/isEqualOverhead                                0.68005
